--- a/web_dev/sinatra_templating/views/new_campus.erb
+++ b/web_dev/sinatra_templating/views/new_campus.erb
@@ -5,7 +5,7 @@
 </head>
 <body>
   <form action="/campus" method="POST">
-    <input type="text" name="name" placeholder="Name">
+    Campus:<input type="text" name="name" placeholder="Name">
     <button type="submit">Save</button>
   </form>
 </body>
