--- a/web_dev/sinatra_templating/views/new_campus.erb
+++ b/web_dev/sinatra_templating/views/new_campus.erb
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>Create a New Campus</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+  <h1>Student Management System</h1>
   <form action="/campus" method="POST">
     Campus:<input type="text" name="name" placeholder="Name">
     <button type="submit">Save</button>
