--- a/web_dev/sinatra_templating/views/new_student.erb
+++ b/web_dev/sinatra_templating/views/new_student.erb
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title>Create a New Student</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+  <h1>Student Management System</h1>
   <form action="/students" method="POST">
-    <input type="text" name="name" placeholder="Name">
-    <input type="text" name="age" placeholder="Age">
-    <button type="submit">Save</button>
+    <p>Name:<input type="text" name="name" placeholder="Name"></p>
+    <p>Age:<input type="text" name="age" placeholder="Age"></p>
+    <p><button type="submit">Save</button></p>
   </form>
 </body>
 </html>
