--- a/web_dev/sinatra_templating/views/new_campus_student.erb
+++ b/web_dev/sinatra_templating/views/new_campus_student.erb
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>Create a New Student_Campus Relation</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+  <h1>Student Management System</h1>
   <form action="/campus_student" method="POST">
     <p>Students:
     <select name="students">
